--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,4 @@
 1. خوندن کتابخونه ها.
-2. اضافه کردن بخش لیست فروش برای فروشنده
-3. اضافه کردن قابلیت افزودن کتاب برای فروشنده
-4. اضافه کردن ثبت نظرات برای خریدار کتاب
-5. روش بانکی
-6. عوض کردن متن صفحه اصلی
-7. هر کتاب بیشتر از یک category
-8. تایید نظر توسط ادمین
-9. تاریخچه فروش فروشنده
-10. 
+لعنت به درس
+2.
+
